sandbox/output
StringCalculatorTest.java:34: error: cannot find symbol
            new ParserWithCustomizedDelimiter();
                ^
  symbol:   class ParserWithCustomizedDelimiter
  location: class StringCalculatorTest
StringCalculatorTest.java:35: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(3, StringCalculator.add("//;\n1;2", parserWithCustomizedDelimiter));
                                        ^
  required: String
  found: String,StringCalculatorParser
  reason: actual and formal argument lists differ in length
2 errors
